SONARPY-1039 Fix FP on S5806 when the name is an IPython builtin